tests/valid/noPrivateIdentifier.ts
// @ts-nocheck
class MyClass {
	private secret = 42;
}
