tests/invalid/noPrivateIdentifier.ts
// @ts-nocheck
class MyClass {
	#secret = 42;
}
